Fix: Dark mode wasn't applied using the Bootstrap or Bulma standard method of enabling dark mode.
https://datatables.net/forums/discussion/80064/bootstrap-5-search-builder-calendar-does-not-apply-dark-theme#latest

--- a/css/dataTables.dateTime.scss
+++ b/css/dataTables.dateTime.scss
@@ -279,7 +279,9 @@ div.dt-datetime-error {
 }
 
 
-html.dark {
+html.dark,
+:root[data-theme="dark"],
+:root[data-bs-theme="dark"] {
 	input.dt-datetime {
 		color-scheme: dark;
 	}
